--- a/style.css
+++ b/style.css
@@ -61,9 +61,19 @@ header{
     -moz-user-select: none;
     user-select: none;
   }
-
-  @media (min-width: 768px) {
+  footer ul li{
+    list-style-type: none;
+  }
+  footer ul li a{
+    font-size: 16px;
+    text-decoration: none;
+    color: #333;
+  }
+  @media (max-width: 768px) {
     .bd-placeholder-img-lg {
       font-size: 3.5rem;
+    }
+    footer ul{
+        display: block;
     }
   }
