--- a/style.css
+++ b/style.css
@@ -1,18 +1,34 @@
-/* Navbar Style */
+
 .art-text{
     padding: 0;
 }
-header{
-    border-bottom: 1px solid rgb(172, 152, 152);
+
+.container{
+  overflow: hidden;
 }
 
-
+.icon{
+  color: #000;
+  font-size: 45px;
+  
+}
 .icon i{
-    font-size: 40px;
-    color: black;
+  background-color: white;
+  border-radius: 100%;
+  box-shadow: 0 0 20px white;
 }
 
-p{
+.icon:hover{
+  color: white;
+  transition: all 1s;
+}
+.icon:hover i{
+  background-color: black;
+  border-radius: 100%;
+  box-shadow: 0 0 15px black;
+}
+
+p, li{
     font-size: 18px;
     color: grey;
 }
@@ -20,7 +36,6 @@ p{
 .blog-post-title{
     font-family: "playfair Display";
 }
-
 
   footer ul li{
     list-style-type: none;
@@ -40,4 +55,9 @@ p{
     footer ul{
         display: block;
     }
+    
+    
   }
+
+  /* Navbar */
+  
