--- a/nav-style.css
+++ b/nav-style.css
@@ -58,9 +58,10 @@
     position: fixed;
     height: 100vh;
     width: 100%;
-    right: 0;
+    right: -100%;
     margin : 0;
-    top: -100%;
+    top: 80px;
+
     text-align: center;
     transition: all 1s;
     background-color: #f2f2fe;
@@ -69,13 +70,13 @@
   .nav-one ul li{
     display: block;
     line-height: 40px;
-    margin: 50px 20px;
+    margin: 50px 20px 0 20px;
 }
   .nav-one ul li{
     border-bottom: 1px solid #000;
   }
   #check:checked ~ ul{
-    top: 80px;
+    right : 0;
   }
   #check:checked ~ label #button{
     display: none;
