--- a/Css/style.css
+++ b/Css/style.css
@@ -1,23 +1,17 @@
-
-.art-text{
-    padding: 0;
+.container {
+   overflow: hidden;
 }
 
-.container{
-  overflow: hidden;
-}
-
+/* Icon */
 .icon{
   color: #000;
-  font-size: 45px;
-  
+  font-size: 45px; 
 }
 .icon i{
   background-color: white;
   border-radius: 100%;
   box-shadow: 0 0 20px white;
 }
-
 .icon:hover{
   color: white;
   transition: all 1s;
@@ -27,47 +21,49 @@
   border-radius: 100%;
   box-shadow: 0 0 15px black;
 }
+/* End Icon */
 
 .carousel-item img{
   height: 620px;
 }
 
-p, li{
-    font-size: 18px;
-    color: grey;
-}
-footer ul li a{
-  font-family: 'Inter', sans-serif;
-}
-
 .blog-post-title{
     font-family: "playfair Display";
 }
+  section{
+    padding-top: 5rem;
+  }
+  #tk p, #tk li{
+    font-size: 18px;
+    color: grey;
+  }
+  
 
+  /* Footer */
   footer ul li{
     list-style-type: none;
   }
   footer ul li a{
-    font-size: 16px;
+    font-size: 18px;
     text-decoration: none;
     color: #333;
   }
-  section{
-    padding-top: 5rem;
-  }
+  
   @media (max-width: 768px) {
     .bd-placeholder-img-lg {
       font-size: 3.5rem;
     }
+    /* Footer */
     footer ul{
         display: block;
     }
-    
+    /* End Footer */
+    .carousel-item img{
+      width: 100%;
+      height: 300px;
+    }
     section{
       padding-top: 0;
     }
     
   }
-
-  /* Navbar */
-  
