--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@
     color: grey;
   }
   
-
+  
   /* Footer */
   footer ul li{
     list-style-type: none;
@@ -47,6 +47,12 @@
     font-size: 18px;
     text-decoration: none;
     color: #333;
+    font-family: 'Inter', sans-serif;
+  }
+
+  .container .col ol li{
+    font-family: 'Inter', sans-serif;
+    
   }
   
   @media (max-width: 768px) {
@@ -65,5 +71,7 @@
     section{
       padding-top: 0;
     }
-    
+    #tentang .container .row{
+      flex-direction: column;
+    }
   }
