--- a/form-style.css
+++ b/form-style.css
@@ -68,13 +68,11 @@
         border: none;
         border-bottom: 2px solid white;
         border-radius: 0;
-        width: 350px;
+        width: 380px;
         background-color: transparent;
     }
     .tombol-form{
-        width: 350px;
-        margin-top: 15px;
-        margin-right: 30px;
-        margin-bottom: 15px;
+        width: 250px;
+        margin: 15px 30px;
     }
 }
