--- a/form-style.css
+++ b/form-style.css
@@ -73,7 +73,6 @@
     }
     .tombol-form{
         width: 250px;
-        margin-top : 15px;
-        margin-bottom : 15px;
+        margin: 15px;
     }
 }
