--- a/form-style.css
+++ b/form-style.css
@@ -75,11 +75,11 @@
         border: none;
         border-bottom: 2px solid white;
         border-radius: 0;
-        width: 280px;
+        width: 100%;
         background-color: transparent;
     }
     .tombol-form{
-        width: 280px;
+        width: 100%;
         margin: 22px 0;
     }
 }
