Update interval slides

--- a/footer-style.css
+++ b/footer-style.css
@@ -1,6 +1,6 @@
 footer{
     background-color: #43302e;
-    color: grey;
+    color: white;
     height: 50px;
     font-family: 'Poppins', sans-serif;
 }
