--- a/form-style.css
+++ b/form-style.css
@@ -1,85 +1,86 @@
-.tombol-form{
-    text-transform: uppercase;
-    background-color: #a26028;
+.tombol-form {
+  text-transform: uppercase;
+  background-color: #a26028;
+  color: white;
+  font-family: "Poppins", sans-serif;
+  transition: 1s;
+  font-weight: 400;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
+}
+.tombol:hover,
+.tombol-form:hover {
+  background-color: white;
+  color: #a26028;
+}
+
+@media (min-width: 992px) {
+  form img {
+    width: 600px;
+    height: 550px;
+  }
+  .contact {
+    background-color: #fff;
+  }
+  .form-row {
+    display: flex;
+  }
+  .contact-logo {
+    padding: 15px 0;
+    font-size: 40px;
+    font-family: "Viga", sans-serif;
+  }
+  .form-name {
+    padding: 15px 0;
+    font-family: "Poppins", sans-serif;
+  }
+  .form-control {
+    border: none;
+    border-bottom: 2px solid #483c32;
+    border-radius: 0;
+    width: 210px;
+  }
+  .form-pesan {
+    border: none;
+    border-bottom: 2px solid #483c32;
+    border-radius: 0;
+    width: 450px;
+  }
+  .tombol-form {
+    width: 450px;
+  }
+}
+
+@media (max-width: 724px) {
+  form {
+    overflow: hidden;
+  }
+  form img {
+    display: none;
+  }
+  .contact-logo {
+    text-align: center;
+    padding: 10px 0;
+    font-size: 40px;
+    font-family: "Viga", sans-serif;
     color: white;
-    font-family: 'Poppins', sans-serif;
-    transition: 1s;
-    font-weight: 400;
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
-}
-.tombol:hover, .tombol-form:hover{
-    background-color: white;
-    color : #a26028;
-}
-
-@media (min-width : 992px) {
-    form img{
-        width: 600px;
-        height: 550px;
-    }
-    .contact{
-        background-color: #fff;
-    }
-    .form-row{
-        display: flex;
-    }
-    .contact-logo{
-        padding: 15px 0;
-        font-size: 40px;
-        font-family: 'Viga', sans-serif;
-    }
-    .form-name{
-        padding: 15px 0;
-        font-family: 'Poppins', sans-serif;
-    }
-    .form-control{
-        border: none;
-        border-bottom: 2px solid #483c32;
-        border-radius: 0;
-        width: 210px;
-    }
-    .form-pesan{
-        border: none;
-        border-bottom: 2px solid #483c32;
-        border-radius: 0;
-        width: 450px;
-    }
-    .tombol-form{
-        width: 450px;
-    }
-}
-
-@media (max-width : 724px){
-    form{
-        overflow: hidden;
-    }
-    form img{
-        display: none;
-    }
-    .contact-logo{
-        text-align: center;
-        padding: 10px 0;
-        font-size: 40px;
-        font-family: 'Viga', sans-serif;
-        color: white;
-    }
-    .form-row{
-        display: block;
-    }
-    .form-name{
-        padding: 10px 0;
-        font-family: 'Poppins', sans-serif;
-        color: white;
-    }
-    .form-control{
-        border: none;
-        border-bottom: 2px solid white;
-        border-radius: 0;
-        width: 100%;
-        background-color: transparent;
-    }
-    .tombol-form{
-        width: 100%;
-        margin: 22px 0;
-    }
+  }
+  .form-row {
+    display: block;
+  }
+  .form-name {
+    padding: 10px 0;
+    font-family: "Poppins", sans-serif;
+    color: white;
+  }
+  .form-control {
+    border: none;
+    border-bottom: 2px solid white;
+    border-radius: 0;
+    width: 100%;
+    background-color: transparent;
+  }
+  .tombol-form {
+    width: 100%;
+    margin: 22px 0;
+  }
 }
