--- a/tab-2-style.css
+++ b/tab-2-style.css
@@ -1,36 +1,38 @@
-.card{
-    margin: 10px 0;
-    background-color: wheat;
-    font-family: 'Poppins', sans-serif;
+.card {
+  margin: 10px 0;
+  background-color: wheat;
+  font-family: "Poppins", sans-serif;
 }
-#contact{
-    background-color: #483c32;
+#contact {
+  background-color: #483c32;
 }
 
-@media (min-width : 992px) {
-    #contact{
-        padding-top: 5rem;
-        height: 100vh;
-    }
-    .card h3, .info{
-        margin: 30px 0;
-        text-align: center;
-        font-size: 32px;
-        font-family: 'Viga', sans-serif;
-        color: black;
-        text-shadow: 1px 1px 1px white;
-    }
+@media (min-width: 992px) {
+  #contact {
+    padding-top: 5rem;
+    height: 100vh;
+  }
+  .card h3,
+  .info {
+    margin: 30px 0;
+    text-align: center;
+    font-size: 32px;
+    font-family: "Viga", sans-serif;
+    color: black;
+    text-shadow: 1px 1px 1px white;
+  }
 }
-@media (max-width : 724px) {
-    #contact{
-        padding-top: 5rem;
-    }
-    .card h3, .info{
-        margin: 30px 0;
-        text-align: center;
-        font-size: 25px;
-        font-family: 'Viga', sans-serif;
-        color: black;
-        text-shadow: 1px 1px 1px white;
-    }
+@media (max-width: 724px) {
+  #contact {
+    padding-top: 5rem;
+  }
+  .card h3,
+  .info {
+    margin: 30px 0;
+    text-align: center;
+    font-size: 25px;
+    font-family: "Viga", sans-serif;
+    color: black;
+    text-shadow: 1px 1px 1px white;
+  }
 }
