--- a/tab-5-style.css
+++ b/tab-5-style.css
@@ -1,16 +1,16 @@
-#contact{
-    background-color: #483c32;
+#contact {
+  background-color: #483c32;
 }
 
-@media (min-width : 992px) {
-    #home, #contact{
-        padding-top: 5rem;
-        height: 100vh;
-    }
+@media (min-width: 992px) {
+  #home,
+  #contact {
+    padding-top: 5rem;
+    height: 100vh;
+  }
 }
-@media (max-width : 724px) {
-    #contact{
-        padding-top: 5rem;
-    }
-    
+@media (max-width: 724px) {
+  #contact {
+    padding-top: 5rem;
+  }
 }
